...
            android:layout_height="110dp"
            android:layout_marginTop="1dp"
            android:src="@drawable/splash"
            android:id="@+id/okay"/>

        <android.widget.Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_marginTop="2dp"

            android:background="@drawable/button_login"
...
